<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGreyLight">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <customfonts.MyTextView_Helvatica_Light
            android:id="@+id/info_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/trip_check_in_info"
            android:textColor="@color/colorGreyDark"
            android:layout_marginBottom="10sp"/>

        <customfonts.MyTextView_Lato_Bold
            android:id="@+id/pickup_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/colorBlack" />

        <customfonts.MyTextView_Helvatica_Light
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/to"
            android:textColor="@color/colorGreyDark" />

        <customfonts.MyTextView_Lato_Bold
            android:id="@+id/dropoff_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/amount_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp">

            <customfonts.MyTextView_Helvatica_Light
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/total"
                android:textSize="16sp"
                android:textColor="@color/colorGreyDark" />

            <customfonts.MyTextView_Lato_Bold
                android:id="@+id/total_view"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorGreenLight"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_below="@id/amount_layout">

            <customfonts.Button_text
                android:id="@+id/cancel_btn"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite" />

            <View
                android:layout_width="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"/>

            <customfonts.Button_text
                android:id="@+id/check_in_btn"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/check_in"
                android:textSize="16sp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
